fix employee tableview styles overlap

--- a/src/main/resources/src/components/MainPage/Dispatcher/Employees/SelectEmployee/TableView/TableView.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Employees/SelectEmployee/TableView/TableView.scss
@@ -1,6 +1,6 @@
 @import "../../../../../../variables.scss";
 
-.tableview-employees {
+.tableview-select-employees {
   display: flex;
   flex-direction: column;
   width: calc(100% - 25px);
